--- a/_output.yml
+++ b/_output.yml
@@ -3,8 +3,8 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Modelos Matemáticos en Ecología I</a></li>
+        <li><a href="./">Análisis y Modelado Espacial I</a></li>
       after: |
-        <li><a href="https://github.com/gerardommc" target="blank">Publicado con bookdown</a></li>
+        <li><a href="https://gerardommc.github.io" target="blank">Regresar al labo</a></li>
     download: ["pdf", "epub"]
 bookdown::epub_book: default
